Make header fixed

--- a/src/assets/sass/_base.scss
+++ b/src/assets/sass/_base.scss
@@ -6,4 +6,5 @@ body {
   text-rendering: optimizeLegibility;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+  padding-top: 5rem;
 }
